--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "connectionString": "mongodb://localhost:27017/heart_monitor",
     "apiUrl": "http://localhost:3000/api",
-    "secret": "SECRET STRING"
+    "secret": "HEART MONITOR"
 }
